Run first javaFX spike test